<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wall"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/mainLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:srcCompat="@drawable/logov" />

    <EditText
        android:id="@+id/user"
        style="@style/Login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@android:color/background_light"
        android:inputType="text"
        android:hint="@string/usuario" />

    <EditText
        android:id="@+id/password"
        style="@style/Login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="@android:color/background_light"
        android:inputType="textPassword"
        android:hint="@string/contrasena" />

    <Button
        android:id="@+id/buttonEntrar"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:textAlignment="center"
        android:backgroundTint="@android:color/tertiary_text_light"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/entrar" />


</LinearLayout>